deployment_app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final

---

apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/instance: librespeed

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: librespeed
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: librespeed
    spec:
      containers:
      - name: librespeed
        image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3
        ports:
        - containerPort: 80
        volumeMounts:
        - name: servers
          mountPath: /servers.json
          subPath: servers.json
      volumes:
      - name: servers
        configMap:
          name: librespeed-servers
      imagePullSecrets:
      - name: registrysecret

---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed-ingress
  namespace: final
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-set-headers: "X-Forwarded-For, X-Real-IP"
spec:
  rules:
  - host: speedtest.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: librespeed  # Должно совпадать с именем Service
            port:
              number: 80
